@@ -4,5 +4,5 @@ package ir.ac.iust.dml.kg.knowledge.store.access.entities;
  * Enum of expert opinion on triple
  */
 public enum ExpertState {
-    Non, Rejected, Approved
+    None, Rejected, Approved
 }
