@@ -45,4 +45,27 @@ public class TypedValue {
     public void setLang(String lang) {
         this.lang = lang;
     }
+
+    @Override
+    public String toString() {
+        if (lang != null)
+            return String.format("\"%s\"^^%s@%s}", value, type, lang);
+        else
+            return String.format("\"%s\"^^%s@%s}", value, type, lang);
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+
+        TypedValue that = (TypedValue) o;
+
+        return value != null ? value.equals(that.value) : that.value == null;
+    }
+
+    @Override
+    public int hashCode() {
+        return value != null ? value.hashCode() : 0;
+    }
 }
